# windy-create-gif

./: README.md  pyproject.toml
tests/: test_winzy_create_gif.py
winzy_create_gif/: __init__.py
