[project]
name = "winzy-create-gif"
version = "0.0.1"
description = "Create gifs from files in a folder."
readme = "README.md"
authors = [{name = "Sukhbinder Singh"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "winzy",
    "imageio",
]

[project.urls]
Homepage = "https://github.com/sukhbinder/winzy-create-gif"
Changelog = "https://github.com/sukhbinder/winzy-create-gif/releases"
Issues = "https://github.com/sukhbinder/winzy-create-gif/issues"
CI = "https://github.com/sukhbinder/winzy-create-gif/actions"

[project.entry-points."winzy.plugins"]
gif = "winzy_create_gif:gif_plugin"


[project.optional-dependencies]
test = ["pytest"]

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
